fix input border on turn red on error on dark mode

--- a/htdocs/luci-static/argon/less/dark.less
+++ b/htdocs/luci-static/argon/less/dark.less
@@ -723,7 +723,7 @@ button,
 select,
 input,
 .cbi-dropdown {
-    border: 1px solid #3c3c3c !important;
+    border: 1px solid #3c3c3c;
 }
 
 
